--- a/projects/static-table/src/lib/table-container/table-config/table-config.component.css
+++ b/projects/static-table/src/lib/table-container/table-config/table-config.component.css
@@ -1,10 +1,11 @@
 .table-config-wrapper {
   box-sizing: border-box;
-  padding: 10px;
-  width: 600px;
+  width: 300px;
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  padding: 10px;
 }
 
 table {
@@ -12,13 +13,20 @@ table {
   border-collapse: collapse;
   flex: 1 0 auto;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 td,
 th {
-  border: 1px solid gray;
-  text-align: left;
-  padding: 8px;
+  border: 1px solid rgb(255, 255, 255);
+  text-align: center;
+  padding: 0 2px;
+}
+
+th {
+  font-size: x-small;
+  background-color: slategray;
+  color: white;
 }
 
 td {
@@ -26,14 +34,11 @@ td {
 }
 
 .table-config {
-  width: auto;
+  width: 100%;
 }
 
 .table-config-row {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   font-size: x-small;
 }
 
@@ -47,4 +52,19 @@ td {
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.table-general-config-wrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.table-general-config-wrapper div {
+  width: 49%;
+}
+
+::ng-deep .mat-form-field-infix {
+  width: auto !important;
 }
