--- a/projects/static-table/src/lib/table-container/table-container.component.css
+++ b/projects/static-table/src/lib/table-container/table-container.component.css
@@ -18,8 +18,13 @@ td {
 .config {
   position: absolute;
   top: 0;
-  right: 5px;
-  font-size: x-small;
+  right: 0;
+  font-size: xx-small;
+  cursor: pointer;
+  background-color: slategray;
+  color: white;
+  padding: 0 5px;
+  line-height: 12px;
 }
 
 /* tr:nth-child(even) {
