--- a/projects/static-table/src/lib/table-container/table-container.component.html
+++ b/projects/static-table/src/lib/table-container/table-container.component.html
@@ -11,7 +11,13 @@
             [colSpan]="td.colspan"
           >
             {{td.content}}
-            <span class="config">{{row.idx}} - {{td.idx}}</span>
+            <span
+              *ngIf="showConfig"
+              class="config"
+              [matMenuTriggerFor]="tableConfigCmp.menu"
+              [matMenuTriggerData]="{td: td, rowIdx: row.idx}"
+              (menuOpened)="tableConfigCmp.menuOpened({td: td, rowIdx: row.idx})"
+            >{{row.idx}} - {{td.idx}}</span>
           </td>
         </ng-container>
         <ng-template #elseTemplate>
@@ -26,4 +32,7 @@
   </ng-container>
 </table>
 <hr>
-<lib-table-config [data]="data"></lib-table-config>
+<lib-table-config
+  [data]="data"
+  (toggleShowConfig)="showConfig = !showConfig"
+></lib-table-config>
