Added: textarea y metodo para modificar contenido

--- a/projects/static-table/src/lib/table-container/table-config/table-config.component.css
+++ b/projects/static-table/src/lib/table-container/table-config/table-config.component.css
@@ -50,6 +50,10 @@ td {
   align-items: center;
 }
 
+.td-mat-menu.toggle {
+  margin-bottom: 10px;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
@@ -67,4 +71,8 @@ td {
 
 ::ng-deep .mat-form-field-infix {
   width: auto !important;
+}
+
+.contenido {
+  width: 100%;
 }
