--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div id="bar">
-    <h1>Angular Email Editor (Demo)</h1>
-    <button (click)="saveDesign()">Save Design</button>
-    <button (click)="exportHtml()">Export HTML</button>
+    <h1>Angular Table Editor (Demo)</h1>
+    <!-- <button (click)="saveDesign()">Save Design</button>
+    <button (click)="exportHtml()">Export HTML</button> -->
   </div>
   <router-outlet></router-outlet>
 </div>
