Update: table model para agregar estilos generales y por td; autocomplete off para inputs de config

--- a/projects/static-table/src/lib/table-container/table-config/table-config.component.html
+++ b/projects/static-table/src/lib/table-container/table-config/table-config.component.html
@@ -48,6 +48,7 @@
           matInput
           placeholder="Filas"
           formControlName="rows"
+          autocomplete="off"
         >
       </mat-form-field>
     </div>
@@ -58,6 +59,7 @@
           matInput
           placeholder="Columnas"
           formControlName="cols"
+          autocomplete="off"
         >
       </mat-form-field>
     </div>
@@ -76,6 +78,7 @@
   >
     <div (click)="$event.stopPropagation()">
       <form
+        autocomplete="off"
         [formGroup]="tdFG"
         novalidate
       >
