--- a/projects/static-table/src/lib/table-container/table-config/table-config.component.html
+++ b/projects/static-table/src/lib/table-container/table-config/table-config.component.html
@@ -11,6 +11,7 @@
   <!-- Table td config -->
   <table class="table-config">
     <ng-container *ngFor="let row of rows; let i = index;">
+      <!-- Idx para títulos superiores (columnas) -->
       <tr *ngIf="i === 0">
         <ng-container *ngFor="let td of row.cols; let j = index;">
           <td
@@ -22,11 +23,14 @@
       </tr>
       <tr>
         <ng-container *ngFor="let td of row.cols; let k = index;">
+          <!-- Idx para títulos laterales (filas) -->
           <th *ngIf="k === 0">{{i}}</th>
           <td
             [matMenuTriggerFor]="menu"
             [matMenuTriggerData]="{td: td, rowIdx: row.idx}"
             [ngStyle]="{'background-color': !!td.display ? 'rgba(215, 242, 160, 0.49)' : 'rgba(255, 134, 157, 0.46)'}"
+            [ngClass]="{'tdHovered': tdHovered.rowIdx === i && tdHovered.tdIdx === k}"
+            (mouseover)="onTdMouseover($event, k, i)"
           >
             <div class="table-config-row">
               <span>-</span>
